# kandji-openapi

./: .pre-commit-config.yaml  README.md  kandji_postman_collection.json  openapi.json  openapi.yaml  pyproject.toml
.github/workflows/: process-changes.yaml
generator_configs/: bash.yaml  go.yaml  python.yaml  swift5.yaml
src/kandji_openapi/: configurations.py  main.py  openapi_generator.py  openapi_types.py  parser.py  reference_resolver.py  strings.py
src/kandji_openapi/models/: auth.py  info.py  item.py  postman_collection.py  request.py  request_body.py  response.py  url.py
