[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kandji-openapi"
version = "1.0.0"
description = "Creates an OpenAPI 3.1 compatible specification based on Kandji's Postman Collection."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openapi-pydantic>=0.5.0",
    "ruamel-yaml>=0.18.7",
]

[project.scripts]
generator = "kandji_openapi.main:main"

[dependency-groups]
dev = [
    "pyright>=1.1.391",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
